updated documentiona and account updating
